--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
   }
